Aggiunta persistenza per appuntamenti ed offerte